etc-examples/default/iptables
# Generated by iptables-save v1.4.8 on Mon Mar 18 23:16:00 2013
*filter
:INPUT ACCEPT [68177:13192952]
:FORWARD ACCEPT [50151:45382101]
:OUTPUT ACCEPT [71410:58953586]
#:fail2ban-REPEAT-ssh - [0:0]
:fail2ban-ssh - [0:0]
:fail2ban-xinetd-fail - [0:0]
:fail2ban-xinetd-fail-log - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh 
-A INPUT -s home.andi95.de -p tcp -m tcp --dport 6556 -j ACCEPT 
-A INPUT ! -s home.andi95.de -p tcp -m tcp --dport 6556 -j DROP 
-A fail2ban-ssh -j RETURN 
#-A fail2ban-REPEAT-ssh -j RETURN
-A fail2ban-xinetd-fail -j RETURN
-A fail2ban-xinetd-fail-log -m limit --limit 6/min --limit-burst 2 -j LOG --log-prefix "fail2ban-xinetd-fail:DROP "
-A fail2ban-xinetd-fail-log -j DROP
COMMIT
# Completed on Mon Mar 18 23:16:00 2013
# Generated by iptables-save v1.4.8 on Mon Mar 18 23:16:00 2013
*nat
:PREROUTING ACCEPT [5616335:412279813]
:POSTROUTING ACCEPT [519896:42724821]
:OUTPUT ACCEPT [398710:24902505]
#-A POSTROUTING -s 10.63.0.0/16 -d 77.87.48.29/32 -j ACCEPT 
#-A POSTROUTING -s 10.63.0.0/16 -d 77.87.48.32/28 -j ACCEPT 
-A POSTROUTING -s 10.63.0.0/16 ! -d 10.0.0.0/8 -j MASQUERADE 
-A POSTROUTING -s 10.0.0.2/32 ! -d 10.63.0.0/16 -j MASQUERADE
COMMIT
# Completed on Mon Mar 18 23:16:00 2013
